--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ dhat = { version = "0.3.2", optional = true }
 itertools = "0.13.0"
 md5 = "0.7.0"
 pico-args = "0.5.0"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
 tinyjson = "2.5.1"
 
 [dev-dependencies]
